<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingWithFriends</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="registration_button">Registration</string>
    <string name="title_activity_application_home">ApplicationHome</string>
    <string name="incorrectLoginToast">Incorrect login details. Please try again.</string>
    <string name="title_activity_login_page">LoginPageActivity</string>
    <string name="title_activity_registration_page">RegistrationPageActivity</string>
    <string name="fillAll">Fill in all fields.</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <string name="title_activity_add_to_wish_list">AddToWishListActivity</string>
    <string name="title_activity_post_sales_report">PostSalesReportActivity</string>
    <string name="title_activity_view_notifications">ViewNotifications</string>
    <string name="title_activity_maps">Map</string>

    <string name="login_text">Login</string>
    <string name="back_text">Back</string>
    <string name="logout_text">Logout</string>
    <string name="name_text">Name</string>
    <string name="search_and_add_text">Search and Add Friends</string>
    <string name="view_friends_text">View Friends</string>
    <string name="max_price_text">Max Price</string>
    <string name="price_text">Price</string>
    <string name="email_text">Email</string>
    <string name="add_text">Add</string>
    <string name="sales_report_text">Sales Report</string>
    <string name="username_text">Username Text</string>
    <string name="username_hint">gburdell3</string>
    <string name="add_to_wishlist_text">Add to WishList</string>
    <string name="view_notifications_text">View Notifications</string>
    <string name="password_text">Password</string>
    <string name="password_hint">password</string>
    <string name="menu_item1">Menu Item 1</string>
    <string name="menu_item2">Menu Item 2</string>
    <string name="cancel_text">Cancel</string>
    <string name="done_text">Done</string>
    <string name="map_view_text">Map View</string>
    <string name="item_text">Item</string>
    <string name="go_text">Go</string>
    <string name="location_text">Location</string>
    <string name="icon_description">Icon</string>
    <string name="title_activity_place_picker">PlacePicker</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_new_sale">Post New Sale</string>
    <string name="title_activity_forgot_passwor">ForgotPassworActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
