<LinearLayout xmlns:android ="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Registration"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:fontFamily="sans-serif-light" />

    <EditText
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name_text"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic" />

    <EditText
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic" />

    <EditText
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="textAutoCorrect"
        android:hint="@string/username_text"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic" />

    <EditText
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:text="@string/done_text"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:background="#fff6c6a0"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:text="@string/cancel_text"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:background="#fff6c6a0"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

</LinearLayout>